Modified index.html to update the homepage content and fix layout issues.

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Arial", sans-serif;
-  background-color: red;
+  background-color:blueviolet;
 }
 .header-container{
     display: flex;
@@ -29,4 +29,7 @@ logo-container{
     margin: 5px 0 0;
     font-size: 16px;
     color: #4c4c4c
+}
+.pageup{
+    font-display:initial;
 }
